# Bachelor-project

./: Bachelor indhold af rapport.docx  Latency test picture new phone  Latency test picture old phone  Servo test bachelor.docx  bachelor nål v2.mw  drift_test  lat_test.asv  lat_test.m  lat_test_picture.m  needle_graphs.m  new_phone_lat_test.txt  old_phone_lat_test.txt  phantomtest.txt  questions.txt
Camera/: CameraCapture.py  CameraCapture3.py  CameraControlNode.py  CameraFeed.py  CameraPublisherNodeTest.py  CameraTest.py  Max and default angles for servos  Period_and_frequency_calculation_for_servos.mw  Pi0_Info.txt  ServoControl.py  ServoControl2.py  ServoTest.py  pi0_commands.txt  python_dependencies.txt  subscriberTest.py
Camera/Info/: Catkin commands.txt  Notes for report.docx  Period_and_frequency_calculation_for_servos.mw  Pi0_Info.txt  US info  notesForReport.txt  (+3 more)
Exam/: notes.txt
Final Programs from Pi/needle_insertion_robot/: CMakeLists.txt
Final Programs from Pi/needle_insertion_robot/launch/: needle_robot.launch  ultrasound_feed.launch
Final Programs from Pi/needle_insertion_robot/scripts/: NeedleControl.py  Pi_needle_control_node.py  Pi_ultrasound_feed_node.py  kinematics.py  robot_control.py
Final Programs from Pi/quadra_msgs/: CMakeLists.txt
Final Programs from Pi/quadra_msgs/msg/: ImpedanceSpectrum.msg
Final Programs from Pi/quadra_msgs/scripts/: listener.py
GitLab folder/: info.txt
GitLab folder/Pi programs/quadra_msgs/: package.xml
Needle Control/: Bracket connector.stl  Camera stage.stl  Camera to bracket connector.stl  Needle pseudo.py  Needle_angle.py  needleTest.py  needle_graphs.m  needle_volt_test.m  test_1.csv  test_2.csv  test_3.csv  tissue.py
ROS-mobile-RAPID/: build.gradle  lat_test.asv  lat_test.m  settings.gradle
Tests/: Delay test control to video feedback.xlsx
UR control/: CMakeLists.txt  Robot_Sim.m  drift_calc.mw  nikolaj_notes.txt  package.xml  rotation.mw
rot_matrix/: rot_matrix_test.xlsx
uma-ros-android-robot-interaction/: build.gradle
water tank test/: water tank test.txt
(+168 files in other folders)
